# AFOLU

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  data_functions.py  generate.py  id_map.toml  main.ipynb  pyproject.toml
afolu/: definitions.py  managers.py  partitions.py  resources.py
afolu/assets/: __init__.py  areas.py  bbox.py  class_masks.py  common.py  constants.py  labels.py  load.py  transitions.py
afolu/assets/large/: __init__.py  areas.py  transitions.py
afolu/assets/small/: __init__.py  areas.py  common.py  transitions.py
dagster/: dagster.yaml
