[project]
name = "afolu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.10.12",
    "dagster-webserver>=1.10.12",
    "earthengine-api>=1.5.13",
    "geedim>=1.9.0",
    "geemap>=0.35.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "seaborn>=0.13.2",
    "sisepuede",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
sisepuede = { git = "https://github.com/RodolfoFigueroa/sisepuede/" }

[tool.dagster]
module_name = "afolu.definitions"

[tool.uv]
package = true

[tool.setuptools]
packages = ["afolu"]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb", "**/dagster/*"]

[tool.ruff]
extend-exclude = ["**/dagster/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PLR0913", "ANN003", "PD901", "PTH123"]
